corrected the LandingPage width issue, modified access to the private routes to add another email to access the payment dashboard in the PrivateRoute file, modified the alignment issue on the AddEmployees modal file

--- a/src/components/Accounts/web3.css
+++ b/src/components/Accounts/web3.css
@@ -18,7 +18,7 @@
 .conn{
   margin-bottom: 50px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
 }
 button{
